--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"example.aternos.ip",
+	"ip":"silverfish.tk",
 	"port": "25565",
-	"name": "afkbot1",
+	"name": "RonTheMemer",
 	"auto-night-skip":"true"
 }
